# eco-analysis

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260101_0001_a1b2c3d4e5f6_initial_schema.py  20260101_0002_b2c3d4e5f6a7_owner_username_to_owner_id.py
benchmarks/: README.md  scaling.py
db/: Dockerfile.migrations  __init__.py  base.py  models.py  requirements.txt
docs/: README.md  algorithms.md  api.md  architecture.md
eco_common/: __init__.py  api_setup.py  auth.py  envelope.py  exceptions.py  http_client.py  internal.py  logging_setup.py  metrics.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: index.js
frontend/src/components/: ErrorBoundary.jsx  Navbar.jsx  TornadoMini.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminPage.jsx  AnalysisPage.jsx  DashboardPage.jsx  LoginPage.jsx  MultiCriteriaPage.jsx  ProjectPage.jsx  RegisterPage.jsx  ScenarioPage.jsx
keys/: .gitignore  README.md
nginx/: nginx.conf
nginx/errors/: 404.html  50x.html
nginx/ssl/: .gitignore
scripts/: generate_keys.sh  generate_tls.sh
services/auth-service/: Dockerfile  auth.py  database.py  main.py  models.py  requirements.txt  schemas.py  wait_for_db.py
services/comparison-service/: Dockerfile  aggregator.py  auth.py  calculator.py  main.py  persistence.py  requirements.txt  schemas.py
services/eco-impact-service/: Dockerfile  calculator.py  main.py  persistence.py  requirements.txt  schemas.py
services/financial-service/: Dockerfile  calculator.py  main.py  persistence.py  requirements.txt  schemas.py
services/multi-criteria-service/: Dockerfile  ahp.py  auth.py  main.py  persistence.py  requirements.txt  schemas.py  topsis.py
services/project-service/: Dockerfile  auth.py  database.py  main.py  models.py  requirements.txt  schemas.py  seed.py  wait_for_db.py
services/report-service/: Dockerfile  builder.py  excel_generator.py  generator.py  main.py  requirements.txt  schemas.py
services/scenario-service/: Dockerfile  calculator.py  main.py  persistence.py  requirements.txt  schemas.py
tests/: conftest.py
tests/unit/: test_ahp.py  test_circuit_breaker.py  test_envelope.py  test_financial_calculator.py  test_orchestration.py  test_scenario_calculator.py  test_topsis.py
